# study-tcp-proxy

./: .pre-commit-config.yaml  .yamlfmt.yaml  Cargo.toml  NOTES.md  README.md  config.json  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml
src/: config.rs  domain.rs  main.rs  proxy.rs  worker.rs
src/balancer/: mod.rs  round_robin.rs  weighted_random.rs
src/health/: mod.rs  passive_probe.rs  tcp_connect_probe.rs  tcp_send_expect_probe.rs
