[package]
name = "study-tcp-proxy"
version = "0.1.0"
edition = "2024"

[package.metadata.bin]
rustfmt-unstable = { version = "^1.0.0" }

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
clap = { version = "4.6.1", features = ["derive"] }
dashmap = { version = "6.2.1", features = ["serde"] }
fastrand = "2.4.1"
futures = "0.3.32"
humantime-serde = "1.1.1"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
nutype = { version = "0.7.0", features = ["regex", "serde"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
smart-default = "0.7.1"
socket2 = "0.6.4"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
